--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "keywords": [],
   "devDependencies": {
+    "@changesets/cli": "^2.24.4",
     "eslint": "^8.24.0",
     "typescript": "^4.8.4"
   }
