--- a/packages/basic/package.json
+++ b/packages/basic/package.json
@@ -1,12 +1,12 @@
 {
   "name": "@debbl/eslint-config-basic",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "author": "Debbl <me@aiwan.run> (https://github.com/Debbl/)",
   "description": "",
   "license": "ISC",
   "main": "index.js",
   "files": [
-    "*.js"
+    "index.js"
   ],
   "keywords": [
     "eslint-config"
