--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "description": "",
   "license": "ISC",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "publish": "changesets publish"
   },
   "keywords": [],
   "devDependencies": {
