--- a/packages/typescript/package.json
+++ b/packages/typescript/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@debbl/eslint-config-ts",
-  "version": "0.0.15",
+  "version": "0.0.16",
   "description": "",
   "author": "Debbl <me@aiwan.run> (https://github.com/Debbl/)",
   "license": "ISC",
@@ -12,7 +12,8 @@
     "index.js"
   ],
   "peerDependencies": {
-    "eslint": "^8.24.0"
+    "eslint": "^8.24.0",
+    "typescript": "^4.8.4"
   },
   "dependencies": {
     "@debbl/eslint-config-basic": "workspace:*",
@@ -20,6 +21,7 @@
     "@typescript-eslint/parser": "^5.38.1"
   },
   "devDependencies": {
-    "eslint": "^8.24.0"
+    "eslint": "^8.24.0",
+    "typescript": "^4.8.4"
   }
 }
