--- a/packages/prettier/package.json
+++ b/packages/prettier/package.json
@@ -1,24 +1,31 @@
 {
   "name": "@debbl/eslint-config-prettier",
-  "version": "0.0.16",
+  "version": "0.0.17",
   "description": "",
+  "author": "Debbl <me@aiwan.run> (https://github.com/Debbl/)",
+  "license": "ISC",
+  "keywords": [
+    "eslint-config"
+  ],
   "main": "index.js",
+  "files": [
+    "index.js",
+    ".prettierrc.cjs"
+  ],
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "eslint": "^8.24.0",
-    "prettier": "^2.7.1"
   },
   "peerDependencies": {
     "eslint": "^8.24.0",
     "prettier": "^2.7.1"
   },
   "dependencies": {
+    "@debbl/eslint-config-basic": "workspace:*",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1"
+  },
+  "devDependencies": {
+    "eslint": "^8.24.0",
+    "prettier": "^2.7.1"
   }
 }
