--- a/package.json
+++ b/package.json
@@ -1,18 +1,19 @@
 {
   "name": "@debbl/eslint-config-monorepo",
-  "private": true,
   "version": "0.0.1",
+  "private": true,
   "packageManager": "pnpm@7.12.2",
-  "author": "Debbl <me@aiwan.run> (https://github.com/Debbl/)",
   "description": "",
+  "author": "Debbl <me@aiwan.run> (https://github.com/Debbl/)",
   "license": "ISC",
+  "keywords": [],
   "scripts": {
     "publish": "changeset publish"
   },
-  "keywords": [],
   "devDependencies": {
     "@changesets/changelog-github": "^0.4.7",
     "@changesets/cli": "^2.24.4",
+    "@debbl/eslint-config-basic": "workspace:*",
     "eslint": "^8.24.0",
     "typescript": "^4.8.4"
   }
