--- a/packages/basic/package.json
+++ b/packages/basic/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@debbl/eslint-config-basic",
-  "version": "0.0.19",
+  "version": "0.0.21",
   "description": "",
   "author": "Debbl <me@aiwan.run> (https://github.com/Debbl/)",
   "license": "ISC",
@@ -12,23 +12,23 @@
     "index.js"
   ],
   "peerDependencies": {
-    "eslint": "^8.24.0"
+    "eslint": ">=8.24.0"
   },
   "dependencies": {
     "eslint-config-standard": "^17.0.0",
     "eslint-plugin-eslint-comments": "^3.2.0",
     "eslint-plugin-html": "^7.1.0",
     "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-jsonc": "^2.4.0",
+    "eslint-plugin-jsonc": "^2.5.0",
     "eslint-plugin-markdown": "^3.0.0",
-    "eslint-plugin-n": "^15.3.0",
-    "eslint-plugin-promise": "^6.0.1",
+    "eslint-plugin-n": "^15.5.1",
+    "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-unicorn": "^43.0.2",
     "eslint-plugin-yml": "^1.2.0",
     "jsonc-eslint-parser": "^2.1.0",
     "yaml-eslint-parser": "^1.1.0"
   },
   "devDependencies": {
-    "eslint": "^8.24.0"
+    "eslint": "^8.27.0"
   }
 }
