--- a/packages/vue/package.json
+++ b/packages/vue/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@debbl/eslint-config-vue",
-  "version": "0.0.19",
+  "version": "0.0.21",
   "description": "",
   "author": "Debbl <me@aiwan.run> (https://github.com/Debbl/)",
   "license": "ISC",
@@ -12,13 +12,13 @@
     "index.js"
   ],
   "peerDependencies": {
-    "eslint": "^8.24.0"
+    "eslint": ">=8.24.0"
   },
   "dependencies": {
-    "@debbl/eslint-config-ts": "workspace:*",
-    "eslint-plugin-vue": "^9.5.1"
+    "@debbl/eslint-config-ts": "workspace:0.0.21",
+    "eslint-plugin-vue": "^9.7.0"
   },
   "devDependencies": {
-    "eslint": "^8.24.0"
+    "eslint": "^8.27.0"
   }
 }
