--- a/packages/prettier/package.json
+++ b/packages/prettier/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@debbl/eslint-config-prettier",
-  "version": "0.0.24",
+  "version": "0.0.25",
   "description": "",
   "author": "Debbl <me@aiwan.run> (https://github.com/Debbl/)",
   "license": "ISC",
@@ -25,6 +25,7 @@
   },
   "devDependencies": {
     "eslint": "^8.27.0",
+    "eslint-config-prettier": "^8.5.0",
     "prettier": "^2.7.1"
   }
 }
