--- a/packages/basic/package.json
+++ b/packages/basic/package.json
@@ -1,9 +1,9 @@
 {
   "name": "@debbl/eslint-config-basic",
-  "version": "0.0.24",
+  "version": "0.0.26",
   "description": "",
   "author": "Debbl <me@aiwan.run> (https://github.com/Debbl/)",
-  "license": "ISC",
+  "license": "MIT",
   "keywords": [
     "eslint-config"
   ],
