--- a/packages/typescript/package.json
+++ b/packages/typescript/package.json
@@ -1,9 +1,9 @@
 {
   "name": "@debbl/eslint-config-ts",
-  "version": "0.0.24",
+  "version": "0.0.26",
   "description": "",
   "author": "Debbl <me@aiwan.run> (https://github.com/Debbl/)",
-  "license": "ISC",
+  "license": "MIT",
   "keywords": [
     "eslint-config"
   ],
@@ -16,7 +16,7 @@
     "typescript": ">=4.8.4"
   },
   "dependencies": {
-    "@debbl/eslint-config-basic": "workspace:0.0.24",
+    "@debbl/eslint-config-basic": "workspace:0.0.26",
     "@typescript-eslint/eslint-plugin": "^5.43.0",
     "@typescript-eslint/parser": "^5.43.0"
   },
