--- a/packages/prettier/package.json
+++ b/packages/prettier/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@debbl/eslint-config-prettier",
-  "version": "0.0.26",
+  "version": "0.0.27",
   "description": "",
   "author": "Debbl <me@aiwan.run> (https://github.com/Debbl/)",
   "license": "MIT",
@@ -16,16 +16,14 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "peerDependencies": {
-    "eslint": ">=8.24.0",
-    "prettier": ">=2.7.1"
+    "eslint": ">=8.24.0"
   },
   "dependencies": {
-    "@debbl/eslint-config-basic": "workspace:0.0.26",
     "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-prettier": "^4.2.1"
+    "eslint-plugin-prettier": "^4.2.1",
+    "prettier": "^2.7.1"
   },
   "devDependencies": {
-    "eslint": "^8.27.0",
-    "prettier": "^2.7.1"
+    "eslint": "^8.27.0"
   }
 }
