--- a/packages/typescript/package.json
+++ b/packages/typescript/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@debbl/eslint-config-ts",
-  "version": "0.0.30",
+  "version": "0.0.32",
   "description": "",
   "author": "Debbl <me@aiwan.run> (https://github.com/Debbl/)",
   "license": "MIT",
@@ -16,7 +16,7 @@
     "typescript": ">=4.8.4"
   },
   "dependencies": {
-    "@debbl/eslint-config-basic": "workspace:0.0.30",
+    "@debbl/eslint-config-basic": "workspace:*",
     "@typescript-eslint/eslint-plugin": "^5.51.0",
     "@typescript-eslint/parser": "^5.51.0"
   },
