--- a/packages/vue/package.json
+++ b/packages/vue/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@debbl/eslint-config-vue",
-  "version": "0.0.30",
+  "version": "0.0.32",
   "description": "",
   "author": "Debbl <me@aiwan.run> (https://github.com/Debbl/)",
   "license": "MIT",
@@ -15,7 +15,7 @@
     "eslint": ">=8.24.0"
   },
   "dependencies": {
-    "@debbl/eslint-config-ts": "workspace:0.0.30",
+    "@debbl/eslint-config-ts": "workspace:*",
     "eslint-plugin-vue": "^9.9.0"
   },
   "devDependencies": {
