--- a/packages/tailwindcss/package.json
+++ b/packages/tailwindcss/package.json
@@ -1,26 +1,23 @@
 {
-  "name": "@debbl/eslint-config-react",
+  "name": "@debbl/eslint-config-tailwindcss",
   "version": "0.0.35",
   "description": "",
   "author": "Debbl <me@aiwan.run> (https://github.com/Debbl/)",
   "license": "MIT",
   "keywords": [
     "eslint-config",
-    "react"
+    "tailwindcss"
   ],
   "main": "index.js",
   "files": [
     "index.js"
   ],
   "peerDependencies": {
-    "eslint": ">=8.24.0"
-  },
-  "dependencies": {
-    "@debbl/eslint-config-ts": "workspace:*",
-    "eslint-plugin-react": "^7.32.2",
-    "eslint-plugin-react-hooks": "^4.6.0"
+    "eslint": ">=8.33.0",
+    "tailwindcss": ">=3.2.7"
   },
   "devDependencies": {
-    "eslint": "^8.33.0"
+    "eslint": "^8.33.0",
+    "tailwindcss": "^3.2.7"
   }
 }
