--- a/packages/typescript/package.json
+++ b/packages/typescript/package.json
@@ -1,11 +1,12 @@
 {
   "name": "@debbl/eslint-config-ts",
-  "version": "0.0.33",
+  "version": "0.0.35",
   "description": "",
   "author": "Debbl <me@aiwan.run> (https://github.com/Debbl/)",
   "license": "MIT",
   "keywords": [
-    "eslint-config"
+    "eslint-config",
+    "typescript"
   ],
   "main": "index.js",
   "files": [
