--- a/packages/tailwindcss/package.json
+++ b/packages/tailwindcss/package.json
@@ -18,6 +18,7 @@
   },
   "devDependencies": {
     "eslint": "^8.33.0",
+    "eslint-plugin-tailwindcss": "^3.10.1",
     "tailwindcss": "^3.2.7"
   }
 }
