--- a/packages/tailwindcss/package.json
+++ b/packages/tailwindcss/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@debbl/eslint-config-tailwindcss",
-  "version": "0.0.36",
+  "version": "0.0.37",
   "description": "",
   "author": "Debbl <me@aiwan.run> (https://github.com/Debbl/)",
   "license": "MIT",
@@ -13,12 +13,12 @@
     "index.js"
   ],
   "peerDependencies": {
-    "eslint": ">=8.33.0",
-    "tailwindcss": ">=3.2.7"
+    "eslint": ">=8.33.0"
+  },
+  "dependencies": {
+    "eslint-plugin-tailwindcss": "^3.10.1"
   },
   "devDependencies": {
-    "eslint": "^8.33.0",
-    "eslint-plugin-tailwindcss": "^3.10.1",
-    "tailwindcss": "^3.2.7"
+    "eslint": "^8.33.0"
   }
 }
