--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -1,9 +1,10 @@
 {
   "name": "@debbl/eslint-config-react",
-  "version": "0.0.36",
+  "version": "0.0.38",
   "description": "",
   "author": "Debbl <me@aiwan.run> (https://github.com/Debbl/)",
   "license": "MIT",
+  "homepage": "https://github.com/Debbl/eslint-config",
   "keywords": [
     "eslint-config",
     "react"
