--- a/packages/basic/package.json
+++ b/packages/basic/package.json
@@ -23,6 +23,7 @@
     "eslint-plugin-jsonc": "^2.7.0",
     "eslint-plugin-markdown": "^3.0.0",
     "eslint-plugin-n": "^15.7.0",
+    "eslint-plugin-no-only-tests": "^3.1.0",
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-unicorn": "^46.0.1",
     "eslint-plugin-yml": "^1.5.0",
