--- a/packages/basic/package.json
+++ b/packages/basic/package.json
@@ -26,6 +26,7 @@
     "eslint-plugin-no-only-tests": "^3.1.0",
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-unicorn": "^46.0.1",
+    "eslint-plugin-unused-imports": "^2.0.0",
     "eslint-plugin-yml": "^1.5.0",
     "jsonc-eslint-parser": "^2.2.0",
     "yaml-eslint-parser": "^1.2.0"
