--- a/.changeset/config.json
+++ b/.changeset/config.json
@@ -6,7 +6,7 @@
       "repo": "Debbl/eslint-config"
     }
   ],
-  "commit": false,
+  "commit": true,
   "fixed": [],
   "linked": [["@debbl/*"]],
   "access": "public",
