--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@debbl/eslint-config-monorepo",
-  "version": "0.0.1",
+  "version": "0.0.3",
   "private": true,
   "packageManager": "pnpm@8.6.11",
   "description": "",
@@ -8,16 +8,15 @@
   "license": "MIT",
   "keywords": [],
   "scripts": {
-    "publish": "changeset publish",
-    "changeset": "changeset",
-    "version": "changeset version",
-    "lint": "eslint . --fix --ignore-path .gitignore"
+    "lint": "eslint . --fix --ignore-path .gitignore",
+    "release": "bumpp -r && pnpm -r publish"
   },
   "devDependencies": {
     "@changesets/changelog-github": "^0.4.8",
     "@changesets/cli": "^2.26.2",
     "@debbl/eslint-config-basic": "workspace:*",
     "@debbl/eslint-config-prettier": "workspace:*",
+    "bumpp": "^9.2.0",
     "eslint": "^8.46.0",
     "typescript": "^5.1.6"
   }
