feat: eslint-config-vue use ts or js by local-pkg

--- a/packages/eslint-config-vue/package.json
+++ b/packages/eslint-config-vue/package.json
@@ -18,7 +18,9 @@
   },
   "dependencies": {
     "@debbl/eslint-config-ts": "workspace:*",
-    "eslint-plugin-vue": "^9.16.1"
+    "@debbl/eslint-config-basic": "workspace:*",
+    "eslint-plugin-vue": "^9.16.1",
+    "local-pkg": "^0.4.3"
   },
   "devDependencies": {
     "eslint": "^8.46.0"
