fix: add local-pkg

--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -26,6 +26,7 @@
     "@debbl/eslint-config-react": "workspace:*",
     "@debbl/eslint-config-solid": "workspace:*",
     "@debbl/eslint-config-tailwindcss": "workspace:*",
-    "@debbl/eslint-config-vue": "workspace:*"
+    "@debbl/eslint-config-vue": "workspace:*",
+    "local-pkg": "^0.4.3"
   }
 }
