--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -25,8 +25,7 @@
     "@debbl/eslint-config-solid": "workspace:*",
     "@debbl/eslint-config-tailwindcss": "workspace:*",
     "@debbl/eslint-config-ts": "workspace:*",
-    "@debbl/eslint-config-vue": "workspace:*",
-    "local-pkg": "^0.4.3"
+    "@debbl/eslint-config-vue": "workspace:*"
   },
   "devDependencies": {
     "eslint": "^8.48.0"
