--- a/packages/eslint-config-react/package.json
+++ b/packages/eslint-config-react/package.json
@@ -19,7 +19,7 @@
   "dependencies": {
     "@debbl/eslint-config-ts": "workspace:*",
     "eslint-plugin-react": "^7.33.2",
-    "eslint-plugin-react-hooks": "^4.6.0"
+    "eslint-plugin-react-hooks": "^4.5.0 || 5.0.0-canary-7118f5dd7-20230705"
   },
   "devDependencies": {
     "eslint": "^8.49.0"
