--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "@debbl/eslint-config-monorepo",
+  "type": "module",
   "version": "0.0.64",
   "private": true,
   "packageManager": "pnpm@8.7.6",
@@ -8,13 +9,18 @@
   "license": "MIT",
   "keywords": [],
   "scripts": {
-    "lint": "eslint . --fix --ignore-path .gitignore",
+    "build": "turbo build",
+    "lint": "eslint . --fix",
     "release": "bumpp -r && pnpm -r publish"
   },
   "devDependencies": {
     "@debbl/eslint-config": "workspace:*",
+    "@types/node": "^20.6.3",
     "bumpp": "^9.2.0",
-    "eslint": "^8.49.0",
+    "eslint": "^8.50.0",
+    "eslint-define-config": "^1.23.0",
+    "tsup": "^7.2.0",
+    "turbo": "^1.10.14",
     "typescript": "^5.2.2"
   }
 }
