--- a/packages/eslint-config-prettier/package.json
+++ b/packages/eslint-config-prettier/package.json
@@ -1,5 +1,6 @@
 {
   "name": "@debbl/eslint-config-prettier",
+  "type": "module",
   "version": "0.0.64",
   "description": "",
   "author": "Debbl <me@aiwan.run> (https://github.com/Debbl/)",
@@ -9,22 +10,22 @@
     "eslint-config",
     "prettier"
   ],
-  "main": "index.js",
+  "main": "dist/index.js",
   "files": [
-    "index.js"
+    "dist"
   ],
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "tsup src/index.ts --format esm --clean --dts"
   },
   "peerDependencies": {
     "eslint": ">=8.24.0"
   },
   "dependencies": {
-    "eslint-config-prettier": "^8.10.0",
-    "eslint-plugin-prettier": "^4.2.1",
-    "prettier": "^2.8.8"
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-prettier": "^5.0.0",
+    "prettier": "^3.0.3"
   },
   "devDependencies": {
-    "eslint": "^8.49.0"
+    "eslint": "^8.50.0"
   }
 }
