--- a/packages/eslint-config-tailwindcss/package.json
+++ b/packages/eslint-config-tailwindcss/package.json
@@ -1,5 +1,6 @@
 {
   "name": "@debbl/eslint-config-tailwindcss",
+  "type": "module",
   "version": "0.0.64",
   "description": "",
   "author": "Debbl <me@aiwan.run> (https://github.com/Debbl/)",
@@ -9,10 +10,13 @@
     "eslint-config",
     "tailwindcss"
   ],
-  "main": "index.js",
+  "main": "dist/index.js",
   "files": [
-    "index.js"
+    "dist"
   ],
+  "scripts": {
+    "build": "tsup src/index.ts --format esm --clean --dts"
+  },
   "peerDependencies": {
     "eslint": ">=8.33.0"
   },
@@ -20,6 +24,6 @@
     "eslint-plugin-tailwindcss": "^3.13.0"
   },
   "devDependencies": {
-    "eslint": "^8.49.0"
+    "eslint": "^8.50.0"
   }
 }
