--- a/packages/eslint-config-ts/package.json
+++ b/packages/eslint-config-ts/package.json
@@ -1,5 +1,6 @@
 {
   "name": "@debbl/eslint-config-ts",
+  "type": "module",
   "version": "0.0.64",
   "description": "",
   "author": "Debbl <me@aiwan.run> (https://github.com/Debbl/)",
@@ -9,21 +10,25 @@
     "eslint-config",
     "typescript"
   ],
-  "main": "index.js",
+  "main": "dist/index.js",
   "files": [
-    "index.js"
+    "dist"
   ],
+  "scripts": {
+    "build": "tsup src/index.ts --format esm --clean --dts"
+  },
   "peerDependencies": {
     "eslint": ">=8.24.0",
     "typescript": ">=4.8.4"
   },
   "dependencies": {
     "@debbl/eslint-config-basic": "workspace:*",
-    "@typescript-eslint/eslint-plugin": "^5.62.0",
-    "@typescript-eslint/parser": "^5.62.0"
+    "@typescript-eslint/eslint-plugin": "^6.7.2",
+    "@typescript-eslint/parser": "^6.7.2",
+    "eslint-plugin-i": "^2.28.1"
   },
   "devDependencies": {
-    "eslint": "^8.49.0",
+    "eslint": "^8.50.0",
     "typescript": "^5.2.2"
   }
 }
