--- a/packages/eslint-config-vue/package.json
+++ b/packages/eslint-config-vue/package.json
@@ -1,5 +1,6 @@
 {
   "name": "@debbl/eslint-config-vue",
+  "type": "module",
   "version": "0.0.64",
   "description": "",
   "author": "Debbl <me@aiwan.run> (https://github.com/Debbl/)",
@@ -9,20 +10,26 @@
     "eslint-config",
     "vue"
   ],
-  "main": "index.js",
+  "main": "dist/index.js",
   "files": [
-    "index.js"
+    "dist"
   ],
+  "scripts": {
+    "build": "tsup src/index.ts --format esm --clean --dts"
+  },
   "peerDependencies": {
     "eslint": ">=8.24.0"
   },
   "dependencies": {
     "@debbl/eslint-config-basic": "workspace:*",
     "@debbl/eslint-config-ts": "workspace:*",
+    "@typescript-eslint/eslint-plugin": "^6.7.2",
+    "@typescript-eslint/parser": "^6.7.2",
     "eslint-plugin-vue": "^9.17.0",
-    "local-pkg": "^0.4.3"
+    "local-pkg": "^0.4.3",
+    "vue-eslint-parser": "^9.3.1"
   },
   "devDependencies": {
-    "eslint": "^8.49.0"
+    "eslint": "^8.50.0"
   }
 }
