--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@debbl/eslint-config-monorepo",
   "type": "module",
-  "version": "0.0.64",
+  "version": "1.0.0-beta.0",
   "private": true,
   "packageManager": "pnpm@8.7.6",
   "description": "",
