--- a/packages/eslint-config-ts/package.json
+++ b/packages/eslint-config-ts/package.json
@@ -24,8 +24,7 @@
   "dependencies": {
     "@debbl/eslint-config-basic": "workspace:*",
     "@typescript-eslint/eslint-plugin": "^6.7.2",
-    "@typescript-eslint/parser": "^6.7.2",
-    "eslint-plugin-i": "^2.28.1"
+    "@typescript-eslint/parser": "^6.7.2"
   },
   "devDependencies": {
     "eslint": "^8.50.0",
