--- a/packages/eslint-config-react/package.json
+++ b/packages/eslint-config-react/package.json
@@ -27,6 +27,7 @@
     "eslint-plugin-react-hooks": "^4.6.0"
   },
   "devDependencies": {
-    "eslint": "^8.50.0"
+    "eslint": "^8.50.0",
+    "global-configs": "workspace:*"
   }
 }
