--- a/packages/eslint-config-tailwindcss/package.json
+++ b/packages/eslint-config-tailwindcss/package.json
@@ -24,6 +24,7 @@
     "eslint-plugin-tailwindcss": "^3.13.0"
   },
   "devDependencies": {
-    "eslint": "^8.50.0"
+    "eslint": "^8.50.0",
+    "global-configs": "workspace:*"
   }
 }
