--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -30,6 +30,7 @@
     "@debbl/eslint-config-vue": "workspace:*"
   },
   "devDependencies": {
-    "eslint": "^8.50.0"
+    "eslint": "^8.50.0",
+    "global-configs": "workspace:*"
   }
 }
