refactor!: use basic

--- a/packages/eslint-config-react/package.json
+++ b/packages/eslint-config-react/package.json
@@ -27,7 +27,6 @@
     "eslint-plugin-react-hooks": "^4.6.0"
   },
   "devDependencies": {
-    "eslint": "^8.50.0",
-    "global-configs": "workspace:*"
+    "eslint": "^8.50.0"
   }
 }
