--- a/packages/eslint-config-prettier/package.json
+++ b/packages/eslint-config-prettier/package.json
@@ -21,12 +21,12 @@
     "eslint": ">=8.24.0"
   },
   "dependencies": {
+    "@debbl/eslint-config-basic": "workspace:*",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.0",
     "prettier": "^3.0.3"
   },
   "devDependencies": {
-    "eslint": "^8.50.0",
-    "global-configs": "workspace:*"
+    "eslint": "^8.50.0"
   }
 }
