--- a/packages/eslint-config-tailwindcss/package.json
+++ b/packages/eslint-config-tailwindcss/package.json
@@ -21,10 +21,10 @@
     "eslint": ">=8.33.0"
   },
   "dependencies": {
+    "@debbl/eslint-config-basic": "workspace:*",
     "eslint-plugin-tailwindcss": "^3.13.0"
   },
   "devDependencies": {
-    "eslint": "^8.50.0",
-    "global-configs": "workspace:*"
+    "eslint": "^8.50.0"
   }
 }
