--- a/packages/eslint-config-tailwindcss/tsconfig.json
+++ b/packages/eslint-config-tailwindcss/tsconfig.json
@@ -3,5 +3,5 @@
   "compilerOptions": {
     "baseUrl": "."
   },
-  "include": ["src"]
+  "include": ["src", "../eslint-config-vue/src/types.ts"]
 }
