--- a/packages/eslint-config-ts/package.json
+++ b/packages/eslint-config-ts/package.json
@@ -27,7 +27,6 @@
     "@typescript-eslint/parser": "^6.7.2"
   },
   "devDependencies": {
-    "eslint": "^8.50.0",
-    "global-configs": "workspace:*"
+    "eslint": "^8.50.0"
   }
 }
