refactor: use prettier replace stylistic

--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@typescript-eslint/eslint-plugin": "^6.7.5",
     "@typescript-eslint/parser": "^6.7.5",
     "eslint-config-flat-gitignore": "^0.1.1",
+    "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-antfu": "^1.0.0-beta.12",
     "eslint-plugin-eslint-comments": "^3.2.0",
     "eslint-plugin-i": "^2.28.1",
@@ -49,6 +50,7 @@
     "eslint-plugin-markdown": "^3.0.1",
     "eslint-plugin-n": "^16.2.0",
     "eslint-plugin-no-only-tests": "^3.1.0",
+    "eslint-plugin-prettier": "^5.0.1",
     "eslint-plugin-sort-keys": "^2.3.5",
     "eslint-plugin-unicorn": "^48.0.1",
     "eslint-plugin-unused-imports": "^3.0.0",
