--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "globals": "^13.23.0",
     "jsonc-eslint-parser": "^2.3.0",
     "local-pkg": "^0.5.0",
+    "prettier": "^3.0.3",
     "vue-eslint-parser": "^9.3.2",
     "yaml-eslint-parser": "^1.2.2"
   },
