--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "type": "module",
   "version": "1.0.0-beta.12",
   "private": true,
-  "packageManager": "pnpm@8.7.6",
+  "packageManager": "pnpm@8.10.0",
   "description": "",
   "author": "Debbl <me@aiwan.run> (https://github.com/Debbl/)",
   "license": "MIT",
@@ -36,13 +36,13 @@
     "eslint": ">=8.0.0"
   },
   "dependencies": {
-    "@antfu/eslint-define-config": "^1.23.0-1",
-    "@typescript-eslint/eslint-plugin": "^6.7.5",
-    "@typescript-eslint/parser": "^6.7.5",
+    "@antfu/eslint-define-config": "^1.23.0-2",
+    "@typescript-eslint/eslint-plugin": "^6.9.1",
+    "@typescript-eslint/parser": "^6.9.1",
     "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-antfu": "^1.0.0-beta.12",
+    "eslint-plugin-antfu": "^1.0.1",
     "eslint-plugin-eslint-comments": "^3.2.0",
-    "eslint-plugin-i": "^2.28.1",
+    "eslint-plugin-i": "^2.29.0",
     "eslint-plugin-jsdoc": "^46.8.2",
     "eslint-plugin-jsonc": "^2.10.0",
     "eslint-plugin-markdown": "^3.0.1",
@@ -52,33 +52,32 @@
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-sort-keys": "^2.3.5",
-    "eslint-plugin-unicorn": "^48.0.1",
+    "eslint-plugin-unicorn": "^49.0.0",
     "eslint-plugin-unused-imports": "^3.0.0",
-    "eslint-plugin-vitest": "^0.3.2",
-    "eslint-plugin-vue": "^9.17.0",
+    "eslint-plugin-vitest": "^0.3.8",
+    "eslint-plugin-vue": "^9.18.1",
     "eslint-plugin-yml": "^1.10.0",
     "globals": "^13.23.0",
-    "jsonc-eslint-parser": "^2.3.0",
+    "jsonc-eslint-parser": "^2.4.0",
     "prettier": "^3.0.3",
     "vue-eslint-parser": "^9.3.2",
     "yaml-eslint-parser": "^1.2.2"
   },
   "devDependencies": {
     "@antfu/ni": "^0.21.8",
-    "@types/eslint": "^8.44.4",
-    "@types/fs-extra": "^11.0.2",
-    "@types/node": "^20.8.6",
+    "@types/eslint": "^8.44.6",
+    "@types/fs-extra": "^11.0.3",
+    "@types/node": "^20.8.10",
     "bumpp": "^9.2.0",
-    "eslint": "^8.51.0",
+    "eslint": "^8.52.0",
     "eslint-flat-config-viewer": "^0.1.0",
     "esno": "^0.17.0",
     "fs-extra": "^11.1.1",
-    "lint-staged": "^15.0.1",
+    "lint-staged": "^15.0.2",
     "simple-git-hooks": "^2.9.0",
     "sucrase": "^3.34.0",
     "tsup": "^7.2.0",
     "typescript": "^5.2.2",
-    "unbuild": "^2.0.0",
     "vitest": "^0.34.6"
   },
   "simple-git-hooks": {
