--- a/package.json
+++ b/package.json
@@ -36,7 +36,6 @@
     "eslint": ">=8.0.0"
   },
   "dependencies": {
-    "@antfu/eslint-define-config": "^1.23.0-2",
     "@typescript-eslint/eslint-plugin": "^6.9.1",
     "@typescript-eslint/parser": "^6.9.1",
     "eslint-config-prettier": "^9.0.0",
@@ -70,6 +69,7 @@
     "@types/node": "^20.8.10",
     "bumpp": "^9.2.0",
     "eslint": "^8.52.0",
+    "eslint-define-config": "^1.24.1",
     "eslint-flat-config-viewer": "^0.1.0",
     "esno": "^0.17.0",
     "fs-extra": "^11.1.1",
