--- a/package.json
+++ b/package.json
@@ -1,14 +1,16 @@
 {
-  "name": "@debbl/eslint-config-monorepo",
+  "name": "@debbl/eslint-config",
   "type": "module",
   "version": "1.0.0-beta.12",
-  "private": true,
   "packageManager": "pnpm@8.10.0",
-  "description": "",
+  "description": "Brendan Dash's ESLint config",
   "author": "Debbl <me@aiwan.run> (https://github.com/Debbl/)",
   "license": "MIT",
+  "homepage": "https://github.com/Debbl/eslint-config",
   "keywords": [
-    "eslint-config"
+    "eslint-config",
+    "eslint-flat-config",
+    "prettier"
   ],
   "exports": {
     ".": {
