--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "eslint": ">=8.0.0"
   },
   "dependencies": {
+    "@next/eslint-plugin-next": "^14.0.1",
     "@typescript-eslint/eslint-plugin": "^6.9.1",
     "@typescript-eslint/parser": "^6.9.1",
     "eslint-config-prettier": "^9.0.0",
