--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@debbl/eslint-config",
   "type": "module",
   "version": "1.1.1",
-  "packageManager": "pnpm@8.10.2",
+  "packageManager": "pnpm@8.10.5",
   "description": "Brendan Dash's ESLint config",
   "author": "Debbl <me@aiwan.run> (https://github.com/Debbl/)",
   "license": "MIT",
@@ -27,6 +27,7 @@
     "build": "tsup src/index.ts --format esm,cjs --clean --dts",
     "stub": "tsup src/index.ts --format esm",
     "dev": "tsup src/index.ts --format esm,cjs --watch & eslint-flat-config-viewer",
+    "test": "vitest",
     "lint": "pnpm run stub && eslint .",
     "release": "bumpp && pnpm publish"
   },
@@ -34,20 +35,20 @@
     "eslint": ">=8.0.0"
   },
   "dependencies": {
-    "@next/eslint-plugin-next": "^14.0.1",
-    "@typescript-eslint/eslint-plugin": "^6.9.1",
-    "@typescript-eslint/parser": "^6.9.1",
+    "@next/eslint-plugin-next": "^14.0.3",
+    "@typescript-eslint/eslint-plugin": "^6.11.0",
+    "@typescript-eslint/parser": "^6.11.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-define-config": "^1.24.1",
-    "eslint-plugin-antfu": "^1.0.2",
+    "eslint-plugin-antfu": "^1.0.9",
     "eslint-plugin-eslint-comments": "^3.2.0",
     "eslint-plugin-i": "^2.29.0",
-    "eslint-plugin-jsdoc": "^46.8.2",
+    "eslint-plugin-jsdoc": "^46.9.0",
     "eslint-plugin-jsonc": "^2.10.0",
     "eslint-plugin-markdown": "^3.0.1",
-    "eslint-plugin-n": "^16.2.0",
+    "eslint-plugin-n": "^16.3.1",
     "eslint-plugin-no-only-tests": "^3.1.0",
-    "eslint-plugin-perfectionist": "^2.2.0",
+    "eslint-plugin-perfectionist": "^2.4.0",
     "eslint-plugin-prettier": "^5.0.1",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
@@ -59,18 +60,22 @@
     "eslint-plugin-yml": "^1.10.0",
     "globals": "^13.23.0",
     "jsonc-eslint-parser": "^2.4.0",
-    "prettier": "^3.0.3",
+    "prettier": "^3.1.0",
     "vue-eslint-parser": "^9.3.2",
     "yaml-eslint-parser": "^1.2.2"
   },
   "devDependencies": {
-    "@types/eslint": "^8.44.6",
-    "@types/node": "^20.8.10",
+    "@types/eslint": "^8.44.7",
+    "@types/node": "^20.9.1",
     "bumpp": "^9.2.0",
     "eslint": "^8.53.0",
-    "eslint-flat-config-viewer": "^0.1.0",
+    "eslint-flat-config-viewer": "^0.1.1",
+    "execa": "^8.0.1",
+    "fast-glob": "^3.3.2",
+    "fs-extra": "^11.1.1",
     "sucrase": "^3.34.0",
-    "tsup": "^7.2.0",
-    "typescript": "^5.2.2"
+    "tsup": "^7.3.0",
+    "typescript": "^5.2.2",
+    "vitest": "^0.34.6"
   }
 }
