--- a/package.json
+++ b/package.json
@@ -67,12 +67,14 @@
   "devDependencies": {
     "@types/eslint": "^8.44.7",
     "@types/node": "^20.9.1",
+    "@types/react": "^18.2.37",
     "bumpp": "^9.2.0",
     "eslint": "^8.53.0",
     "eslint-flat-config-viewer": "^0.1.1",
     "execa": "^8.0.1",
     "fast-glob": "^3.3.2",
     "fs-extra": "^11.1.1",
+    "react": "^18.2.0",
     "sucrase": "^3.34.0",
     "tsup": "^7.3.0",
     "typescript": "^5.2.2",
