--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "test": "vitest",
     "typecheck": "tsc --noEmit",
     "lint": "pnpm run stub && eslint .",
+    "lint:fix": "pnpm run stub && eslint . --fix",
     "release": "bumpp && pnpm publish"
   },
   "peerDependencies": {
@@ -73,7 +74,6 @@
     "eslint": "^8.53.0",
     "eslint-flat-config-viewer": "^0.1.1",
     "execa": "^8.0.1",
-    "fast-diff": "^1.3.0",
     "fast-glob": "^3.3.2",
     "fs-extra": "^11.1.1",
     "react": "^18.2.0",
