--- a/package.json
+++ b/package.json
@@ -42,12 +42,14 @@
     "@typescript-eslint/parser": "^6.13.1",
     "eslint-config-prettier": "^9.0.0",
     "eslint-define-config": "^2.0.0",
+    "eslint-mdx": "^2.2.0",
     "eslint-plugin-antfu": "^1.0.11",
     "eslint-plugin-eslint-comments": "^3.2.0",
     "eslint-plugin-i": "^2.29.0",
     "eslint-plugin-jsdoc": "^46.9.0",
     "eslint-plugin-jsonc": "^2.10.0",
     "eslint-plugin-markdown": "^3.0.1",
+    "eslint-plugin-mdx": "^2.2.0",
     "eslint-plugin-n": "^16.3.1",
     "eslint-plugin-no-only-tests": "^3.1.0",
     "eslint-plugin-perfectionist": "^2.5.0",
