--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-define-config": "^2.0.0",
     "eslint-mdx": "^2.2.0",
+    "eslint-parser-plain": "^0.1.0",
     "eslint-plugin-eslint-comments": "^3.2.0",
     "eslint-plugin-i": "^2.29.0",
     "eslint-plugin-jsdoc": "^46.9.0",
