--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-tailwindcss": "^3.13.0",
+    "eslint-plugin-toml": "^0.7.1",
     "eslint-plugin-unicorn": "^49.0.0",
     "eslint-plugin-unused-imports": "^3.0.0",
     "eslint-plugin-vitest": "^0.3.10",
@@ -65,6 +66,7 @@
     "globals": "^13.23.0",
     "jsonc-eslint-parser": "^2.4.0",
     "prettier": "^3.1.0",
+    "toml-eslint-parser": "^0.9.3",
     "vue-eslint-parser": "^9.3.2",
     "yaml-eslint-parser": "^1.2.2"
   },
