--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@debbl/eslint-config",
   "type": "module",
   "version": "3.0.5-beta.1",
-  "packageManager": "pnpm@8.14.1",
+  "packageManager": "pnpm@8.15.0",
   "description": "Brendan Dash's ESLint config",
   "author": "Debbl <me@aiwan.run> (https://github.com/Debbl/)",
   "license": "MIT",
@@ -38,16 +38,16 @@
   },
   "dependencies": {
     "@next/eslint-plugin-next": "^14.1.0",
-    "@typescript-eslint/eslint-plugin": "^6.19.0",
-    "@typescript-eslint/parser": "^6.19.0",
+    "@typescript-eslint/eslint-plugin": "^6.19.1",
+    "@typescript-eslint/parser": "^6.19.1",
     "eslint-config-prettier": "^9.1.0",
     "eslint-define-config": "^2.1.0",
     "eslint-mdx": "^3.1.5",
     "eslint-parser-plain": "^0.1.0",
     "eslint-plugin-eslint-comments": "^3.2.0",
     "eslint-plugin-i": "^2.29.1",
-    "eslint-plugin-jsdoc": "^48.0.2",
-    "eslint-plugin-jsonc": "^2.12.2",
+    "eslint-plugin-jsdoc": "^48.0.4",
+    "eslint-plugin-jsonc": "^2.13.0",
     "eslint-plugin-markdown": "^3.0.1",
     "eslint-plugin-mdx": "^3.1.5",
     "eslint-plugin-n": "^16.6.2",
@@ -56,7 +56,7 @@
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-tailwindcss": "3.14.1-beta.1",
+    "eslint-plugin-tailwindcss": "^3.14.1",
     "eslint-plugin-toml": "^0.9.2",
     "eslint-plugin-unicorn": "^50.0.1",
     "eslint-plugin-unused-imports": "^3.0.0",
@@ -67,12 +67,12 @@
     "jsonc-eslint-parser": "^2.4.0",
     "prettier": "^3.2.4",
     "toml-eslint-parser": "^0.9.3",
-    "vue-eslint-parser": "^9.4.0",
+    "vue-eslint-parser": "^9.4.2",
     "yaml-eslint-parser": "^1.2.2"
   },
   "devDependencies": {
     "@types/eslint": "^8.56.2",
-    "@types/node": "^20.11.5",
+    "@types/node": "^20.11.10",
     "@types/react": "^18.2.48",
     "bumpp": "^9.3.0",
     "eslint": "^8.56.0",
@@ -84,6 +84,6 @@
     "sucrase": "^3.35.0",
     "tsup": "^8.0.1",
     "typescript": "^5.3.3",
-    "vitest": "^1.2.1"
+    "vitest": "^1.2.2"
   }
 }
