--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@debbl/eslint-config",
   "type": "module",
-  "version": "3.0.5-beta.1",
+  "version": "3.0.5",
   "packageManager": "pnpm@8.15.0",
   "description": "Brendan Dash's ESLint config",
   "author": "Debbl <me@aiwan.run> (https://github.com/Debbl/)",
