--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-refresh": "^0.4.6",
     "eslint-plugin-tailwindcss": "^3.15.1",
     "eslint-plugin-toml": "^0.11.0",
     "eslint-plugin-unicorn": "^52.0.0",
