--- a/package.json
+++ b/package.json
@@ -34,7 +34,13 @@
     "release": "bumpp && pnpm publish"
   },
   "peerDependencies": {
-    "eslint": ">=8.40.0"
+    "eslint": ">=8.40.0",
+    "eslint-plugin-tailwindcss": "^3.15.1"
+  },
+  "peerDependenciesMeta": {
+    "eslint-plugin-tailwindcss": {
+      "optional": true
+    }
   },
   "dependencies": {
     "@next/eslint-plugin-next": "^14.1.4",
@@ -45,7 +51,7 @@
     "eslint-mdx": "^3.1.5",
     "eslint-parser-plain": "^0.1.0",
     "eslint-plugin-eslint-comments": "^3.2.0",
-    "eslint-plugin-i": "^2.29.1",
+    "eslint-plugin-import-x": "^0.5.0",
     "eslint-plugin-jsdoc": "^48.2.2",
     "eslint-plugin-jsonc": "^2.15.0",
     "eslint-plugin-markdown": "^4.0.1",
@@ -57,7 +63,6 @@
     "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
-    "eslint-plugin-tailwindcss": "^3.15.1",
     "eslint-plugin-toml": "^0.11.0",
     "eslint-plugin-unicorn": "^52.0.0",
     "eslint-plugin-unused-imports": "^3.1.0",
@@ -78,6 +83,7 @@
     "bumpp": "^9.4.0",
     "eslint": "^8.57.0",
     "eslint-flat-config-viewer": "^0.1.20",
+    "eslint-plugin-tailwindcss": "^3.15.1",
     "execa": "^8.0.1",
     "fast-glob": "^3.3.2",
     "fs-extra": "^11.2.0",
