--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
   "scripts": {
     "build": "tsup --format esm,cjs --clean --dts",
     "stub": "tsup --format esm",
-    "dev": "tsup --format esm,cjs --watch & eslint-flat-config-viewer",
+    "dev": "npx @eslint/config-inspector --config eslint.config.js",
+    "build:inspector": "pnpm build && npx @eslint/config-inspector build",
+    "watch": "tsup --format esm,cjs --watch",
     "test": "vitest",
     "typecheck": "tsc --noEmit",
     "lint": "pnpm run stub && eslint .",
@@ -60,7 +62,7 @@
     "eslint-plugin-perfectionist": "^2.10.0",
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-react": "^7.34.1",
-    "eslint-plugin-react-hooks": "^4.6.2",
+    "eslint-plugin-react-hooks": "5.1.0-beta-94eed63c49-20240425",
     "eslint-plugin-react-refresh": "^0.4.6",
     "eslint-plugin-toml": "^0.11.0",
     "eslint-plugin-unicorn": "^52.0.0",
@@ -76,6 +78,7 @@
     "yaml-eslint-parser": "^1.2.2"
   },
   "devDependencies": {
+    "@eslint/config-inspector": "^0.4.7",
     "@types/eslint": "^8.56.10",
     "@types/node": "^20.12.7",
     "@types/react": "^18.3.1",
