--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
     "@types/react": "^18.3.1",
     "bumpp": "^9.4.1",
     "eslint": "^8.57.0",
+    "eslint-plugin-tailwindcss": "^3.15.1",
     "execa": "^8.0.1",
     "fast-glob": "^3.3.2",
     "fs-extra": "^11.2.0",
