feat: update deps and some rules

--- a/package.json
+++ b/package.json
@@ -40,8 +40,8 @@
   },
   "dependencies": {
     "@next/eslint-plugin-next": "^14.2.5",
-    "@typescript-eslint/eslint-plugin": "^7.17.0",
-    "@typescript-eslint/parser": "^7.17.0",
+    "@typescript-eslint/eslint-plugin": "8.0.0-alpha.55",
+    "@typescript-eslint/parser": "8.0.0-alpha.55",
     "eslint-config-prettier": "^9.1.0",
     "eslint-mdx": "^3.1.5",
     "eslint-plugin-eslint-comments": "^3.2.0",
@@ -56,13 +56,13 @@
     "eslint-plugin-prettier": "^5.2.1",
     "eslint-plugin-react": "^7.35.0",
     "eslint-plugin-react-compiler": "0.0.0-experimental-0998c1e-20240625",
-    "eslint-plugin-react-hooks": "4.6.2",
+    "eslint-plugin-react-hooks": "5.1.0-rc-14a4699f-20240725",
     "eslint-plugin-react-refresh": "^0.4.9",
     "eslint-plugin-solid": "^0.14.1",
     "eslint-plugin-tailwindcss": "^3.17.4",
     "eslint-plugin-toml": "^0.11.1",
     "eslint-plugin-unicorn": "^55.0.0",
-    "eslint-plugin-unused-imports": "3.2.0",
+    "eslint-plugin-unused-imports": "^4.0.1",
     "eslint-plugin-vitest": "^0.5.4",
     "eslint-plugin-vue": "^9.27.0",
     "eslint-plugin-yml": "^1.14.0",
@@ -80,7 +80,7 @@
     "@types/node": "^22.0.0",
     "@types/react": "^18.3.3",
     "bumpp": "^9.4.1",
-    "eslint": "8.57.0",
+    "eslint": "^9.8.0",
     "execa": "^9.3.0",
     "fast-glob": "^3.3.2",
     "fs-extra": "^11.2.0",
