chore: update deps

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@debbl/eslint-config",
   "type": "module",
   "version": "3.8.4",
-  "packageManager": "pnpm@9.13.2",
+  "packageManager": "pnpm@9.14.2",
   "description": "Brendan Dash's ESLint config",
   "author": "Debbl <me@aiwan.run> (https://github.com/Debbl/)",
   "license": "MIT",
@@ -41,17 +41,17 @@
   "dependencies": {
     "@eslint/markdown": "^6.2.1",
     "@next/eslint-plugin-next": "^15.0.3",
-    "@typescript-eslint/eslint-plugin": "^8.14.0",
-    "@typescript-eslint/parser": "^8.14.0",
+    "@typescript-eslint/eslint-plugin": "^8.15.0",
+    "@typescript-eslint/parser": "^8.15.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-eslint-comments": "^3.2.0",
-    "eslint-plugin-import-x": "^4.4.2",
+    "eslint-plugin-import-x": "^4.4.3",
     "eslint-plugin-jsdoc": "^50.5.0",
-    "eslint-plugin-jsonc": "^2.18.1",
+    "eslint-plugin-jsonc": "^2.18.2",
     "eslint-plugin-mdx": "^3.1.5",
-    "eslint-plugin-n": "^17.13.2",
+    "eslint-plugin-n": "^17.14.0",
     "eslint-plugin-no-only-tests": "^3.3.0",
-    "eslint-plugin-perfectionist": "^3.9.1",
+    "eslint-plugin-perfectionist": "^4.0.3",
     "eslint-plugin-prettier": "^5.2.1",
     "eslint-plugin-react": "^7.37.2",
     "eslint-plugin-react-compiler": "latest",
@@ -60,7 +60,7 @@
     "eslint-plugin-solid": "^0.14.4",
     "eslint-plugin-tailwindcss": "^3.17.5",
     "eslint-plugin-toml": "^0.11.1",
-    "eslint-plugin-unicorn": "^56.0.0",
+    "eslint-plugin-unicorn": "^56.0.1",
     "eslint-plugin-unused-imports": "^4.1.4",
     "eslint-plugin-vitest": "^0.5.4",
     "eslint-plugin-vue": "^9.31.0",
@@ -68,7 +68,7 @@
     "globals": "^15.12.0",
     "jsonc-eslint-parser": "^2.4.0",
     "prettier": "^3.3.3",
-    "prettier-plugin-tailwindcss": "^0.6.8",
+    "prettier-plugin-tailwindcss": "^0.6.9",
     "toml-eslint-parser": "^0.10.0",
     "vue-eslint-parser": "^9.4.3",
     "yaml-eslint-parser": "^1.2.3"
@@ -76,10 +76,10 @@
   "devDependencies": {
     "@eslint/config-inspector": "^0.5.6",
     "@types/eslint": "^9.6.1",
-    "@types/node": "^22.9.0",
+    "@types/node": "^22.9.1",
     "@types/react": "^18.3.12",
     "bumpp": "^9.8.1",
-    "eslint": "9.14.0",
+    "eslint": "^9.15.0",
     "execa": "^9.5.1",
     "fast-glob": "^3.3.2",
     "fs-extra": "^11.2.0",
