feat: enhance release workflow with setup, install, build, and publish steps

--- a/.github/workflows/realese.yml
+++ b/.github/workflows/realese.yml
@@ -5,6 +5,10 @@ on:
     tags:
       - 'v*'
 
+permissions:
+  id-token: write # Required for OIDC
+  contents: write
+
 jobs:
   release:
     runs-on: ubuntu-latest
@@ -16,6 +20,18 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: lts/*
+
+      - name: Setup
+        run: npm i -g @antfu/ni
+
+      - name: Install
+        run: nci
+
+      - name: Build
+        run: nr build
+
+      - name: Publish to NPM
+        run: nr publish --access public --no-git-checks
 
       - run: npx changelogithub
         env:
