chore: add missing environment variable section for NPM publish step in release workflow

--- a/.github/workflows/realese.yml
+++ b/.github/workflows/realese.yml
@@ -40,6 +40,7 @@ jobs:
 
       - name: Publish to NPM
         run: pnpm -r publish --access public --no-git-checks
+        env:
 
       - run: npx changelogithub
         env:
